--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^3.9.0",
     "react-phone-input-international": "^2.14.1",
     "react-redux": "^7.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
