--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
+    "react-crossfade-image": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-phone-input-international": "^2.14.1",
