--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.12.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.6.0",
+    "google-map-react": "^2.1.9",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
