--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "swiper": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
