--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.12.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.6.0",
+    "dotenv": "^9.0.2",
     "google-map-react": "^2.1.9",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
