--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-redux": "^7.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-slick": "^0.28.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
