--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^9.0.2",
     "google-map-react": "^2.1.9",
+    "leaflet": "^1.7.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
     "react-crossfade-image": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-leaflet": "^3.2.0",
     "react-phone-input-international": "^2.14.1",
     "react-redux": "^7.2.0",
     "react-reveal": "^1.2.2",
