--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-map-react": "^2.1.9",
     "leaflet": "^1.7.1",
     "node-sass": "^4.14.1",
+    "query-string": "^4.3.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
     "react-crossfade-image": "^1.2.0",
