--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-leaflet": "^3.2.0",
+    "react-multi-carousel": "^2.6.3",
     "react-phone-input-international": "^2.14.1",
     "react-redux": "^7.2.0",
     "react-reveal": "^1.2.2",
