--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-leaflet": "^3.2.0",
     "react-multi-carousel": "^2.6.3",
     "react-phone-input-international": "^2.14.1",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
